Fixed Sidebar Item Content spacing

--- a/frontend/src/app/layout/sidebar/sidebar-entry/sidebar-entry.component.scss
+++ b/frontend/src/app/layout/sidebar/sidebar-entry/sidebar-entry.component.scss
@@ -40,8 +40,8 @@
 }
 
 .divider {
-  margin-top: 4px;
-  margin-bottom: 2px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .button-container{
